--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welkom</title>
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/welkom.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/welkom.css">
 </head>
 <body>
     <div class="welcome-container">
         <h1>Welkom bij PathPilot</h1>
         <p>De app die uw hardloop/fiets routes genereert</p>
-        <a href="./html/keuze.html" class="btn">Begin</a>
+        <a href="html/keuze.html" class="btn">Begin</a>
     </div>
 </body>
 </html>
