--- a/html/kilometers.html
+++ b/html/kilometers.html
@@ -11,5 +11,12 @@
     <input type="number" id="kilometers" placeholder="Aantal kilometers" required min="1">
     <button type="submit">Bevestigen</button>
   </form>
+
+  <!-- Locatie toestemming -->
+  <div id="location-popup" style="display: none;">
+    <p>Wilt u uw locatie delen voor het genereren van routes?</p>
+    <button id="allow-location">Ja, deel mijn locatie</button>
+    <button id="deny-location">Nee, bedankt</button>
+  </div>
 </body>
 </html>
