--- a/html/keuze.html
+++ b/html/keuze.html
@@ -7,7 +7,8 @@
 </head>
 <body>
   <header>
-    <h1 id="titel">De app voor uw hardloop- en fietsroutes</h1>
+    <h1 id="titel">De app voor uw hardloop- en fietsroutes
+    </h1>
   </header>
 
   <div id="links">
