--- a/html/fiets.html
+++ b/html/fiets.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d39225.56811812194!2d4.841505258063465!3d52.087047360032344!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c679d7469d3ad9%3A0x7943afb934ce19a8!2sWoerden!5e0!3m2!1snl!2snl!4v1738526080263!5m2!1snl!2snl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </body>
 </html>
